--- a/src/pages/docs/index.mdx
+++ b/src/pages/docs/index.mdx
@@ -5,9 +5,7 @@ index: 0
 
 # Getting Started
 
-{% hint style="info" %}
-These docs are still being worked on. Some parts may be unfinished
-{% endhint %}
+<Info>These docs are still being worked on. Some parts may be unfinished</Info>
 
 Designed with simplicity in mind, the Uniswap protocol provides an interface for seamless exchange of ERC20 tokens on Ethereum. By eliminating unnecessary forms of rent extraction and middlemen it allows faster, more efficient exchange. Where it makes tradeoffs, decentralization, censorship resistance, and security are prioritized.
 
