--- a/src/pages/blog/post-01/index.mdx
+++ b/src/pages/blog/post-01/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Announcing Uniswap v2
-date: 2-17-2019
+title: 'A new and improved Uniswap.info'
+date: '2019-11-05'
+author: 'Hayden Adams'
+featuredImage: ./01.jpg
 ---
-
-[Testing](./Whitepaper.pdf)
 
 ![Unicorn](./01.jpg)
 
