--- a/src/pages/news/bounty.mdx
+++ b/src/pages/news/bounty.mdx
@@ -2,13 +2,19 @@
 title: Uniswap Bug Bounty Program
 ---
 
-<Info>
-  <b>This page is not publshed and the bounty is not active.</b>
-</Info>
+import Button from '../../components/button'
+
+<center>
+  <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
+    Submit a report
+  </Button>
+</center>
+
+# **Overview**
 
 As an open source, on-chain protocol, Uniswap has often benefited from community member participation in our testing and debugging processes. As we move toward the launch of Uniswap V2, we would like to formalize that process and reward the dedicated security engineers who help keep DeFi safe.
 
-## Scope
+# **Scope**
 
 [Uniswap Core](https://github.com/Uniswap/uniswap-v2-core)
 
@@ -19,7 +25,7 @@ As an open source, on-chain protocol, Uniswap has often benefited from community
   Contracts will be considered less severe than those found in Uniswap Core.
 </sup>
 
-## **Bug Bounty Rewards**
+# **Bug Bounty Rewards**
 
 We will assess the severity of any bug using the [CVSS Risk Rating](https://www.first.org/cvss/calculator/3.0) model based on both impact and likelihood.
 
@@ -30,7 +36,7 @@ We will assess the severity of any bug using the [CVSS Risk Rating](https://www.
 
 BONUS: Prior to the launch of Uniswap V2 (expected: May 2020), successful bug reporters will receive a 20% bonus on their bounty pay out. This is to incentivize hackers to come forward before launch.
 
-## **What We&#39;re Looking For**
+# **What We&#39;re Looking For**
 
 We are mainly interested in any security vulnerabilities at the smart contract level that would result in a loss of funds while interacting with Uniswap\*. This includes any vulnerability where a user can siphon assets from other users or the platform in an unintended way. If for example a user was able to take ETH, tokens, or Liquidity pool shares that they were not entitled to this would be a loss of funds bug.
 
@@ -41,7 +47,7 @@ Also included in this would be any bug allowing someone to lock up funds in such
   e.g. flash swaps.
 </small>
 
-## **A bug report may qualify for a reward only when:**
+# **A bug report may qualify for a reward only when:**
 
 - It makes our team aware of the bug for the first time
 - The reporter discloses it privately and gives us a reasonable amount of time to address the bug and report on it publicly
@@ -75,3 +81,16 @@ Vulnerabilities contingent on any of the following activities do not qualify for
 - Bugs that are not reproducible
 - Bugs disclosed to other parties without consent from our team
 - Issues which we cannot reasonably be expected to be able to do anything about
+
+  <br/>
+
+## **Think you found something?**
+
+  <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
+    Submit a report
+  </Button>
+  <br/>
+  <br/>
+  <br/>
+
+---- 
