Change bounty to its own page

--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -1,23 +1,25 @@
----
-title: Uniswap Bug Bounty Program
----
 
-import Button from '../../components/button'
+import Button from '../components/button'
+
+<div style={{maxWidth: '650px', margin: '0px auto'}}>
+<h1 style={{fontSize: "96px", margin: '4rem 0 2rem 0', textAlign: 'center'}}>Uniswap Bug Bounty</h1>
 
 <center>
   <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
     Submit a report
   </Button>
 </center>
+<br/>
+<br/>
 
-# **Overview**
+
+# Overview
 
 As an open source, on-chain protocol, Uniswap has often benefited from community member participation in our testing and debugging processes. As we move toward the launch of Uniswap V2, we would like to formalize that process and reward the dedicated security engineers who help keep DeFi safe.
 
-# **Scope**
+# Scope
 
-[Uniswap Core](https://github.com/Uniswap/uniswap-v2-core)
-
+[Uniswap Core](https://github.com/Uniswap/uniswap-v2-core) <br/>
 [Periphery Contracts](https://github.com/Uniswap/uniswap-v2-periphery)\*
 
 <sup>
@@ -29,10 +31,10 @@ As an open source, on-chain protocol, Uniswap has often benefited from community
 
 We will assess the severity of any bug using the [CVSS Risk Rating](https://www.first.org/cvss/calculator/3.0) model based on both impact and likelihood.
 
-- Critical- Up to \$20,000
+- Critical- Up to \$50,000
 - High- Up to \$5,000
 - Medium- Up to \$2,000
-- Low- Up to \$1000
+- Low- Up to \$1,000
 
 BONUS: Prior to the launch of Uniswap V2 (expected: May 2020), successful bug reporters will receive a 20% bonus on their bounty pay out. This is to incentivize hackers to come forward before launch.
 
@@ -82,15 +84,8 @@ Vulnerabilities contingent on any of the following activities do not qualify for
 - Bugs disclosed to other parties without consent from our team
 - Issues which we cannot reasonably be expected to be able to do anything about
 
-  <br/>
+<br/>
+<br/>
+<br/>
 
-## **Think you found something?**
-
-  <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
-    Submit a report
-  </Button>
-  <br/>
-  <br/>
-  <br/>
-
----- 
+</div>
