Fit title sizing

--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -1,11 +1,12 @@
 
 import Button from '../components/button'
 import BG from '../components/bg'
+import styled from 'styled-components'
 
 <BG />
 
 <div style={{maxWidth: '650px', margin: '0px auto'}}>
-<h1 style={{fontSize: "96px", margin: '4rem 0 2rem 0', textAlign: 'center'}}>Uniswap Bug Bounty</h1>
+<Title>Uniswap Bug Bounty</Title>
 
 <center>
   <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
@@ -76,7 +77,6 @@ Anyone who reports a unique, previously-unreported vulnerability that results in
 
 # **Eligibility**
 
-Eligibility
 To be eligible for a reward under this Program, you must:
 - Discover a previously unreported, non-public vulnerability that would result in a loss of or a lock on any ERC-20 token on Uniswap (but not on any third party platform interacting with Uniswap V2) and that is within the scope of this Program.
 - Be the first to disclose the unique vulnerability to contact@uniswap.org, in compliance with the disclosure requirements above. 
