Small copy tweaks

--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -19,7 +19,7 @@ import styled from 'styled-components'
 
 # Overview
 
-As an open source, on-chain protocol, the Uniswap protocol (“Uniswap”) has benefited from community member participation in testing and debugging the smart contracts. As the launch of version 2 of Uniswap (“Uniswap V2”) approaches, it is beneficial to formalize the program incentivizing those dedicated security engineers who can help make Uniswap V2 safer (the “Program”). The Program will bolster the professional audits and formal verification Uniswap V2 has undergone.
+Open source, on-chain protocols benefit from community member participation in testing and debugging the smart contracts. As the launch of version 2 of the Uniswap protocol ("Uniswap V2") approaches, it is beneficial to formalize the program incentivizing those dedicated security engineers who can help make Uniswap V2 safer (the "Program"). The Program will bolster the professional audits and formal verification Uniswap V2 has undergone.
 
 # Scope
 
@@ -63,7 +63,7 @@ Prior to the deployment of Uniswap V2 to the Ethereum mainnet, which is expected
 
 # **Disclosure**
 
-Any vulnerability or bug discovered must be reported only to the following email: contact@uniswap.org; must not be disclosed publicly; must not be disclosed to any other person, entity or email address prior to disclosure to the [contact@uniswap.org](mailto:contact@uniswap.org) email; and must not be disclosed in any way other than to the contact@uniswap.org email.  In addition, disclosure to contact@uniswap.org must be made promptly following discovery of the vulnerability.
+Any vulnerability or bug discovered must be reported only to the following email: [contact@uniswap.org](mailto:contact@uniswap.org); must not be disclosed publicly; must not be disclosed to any other person, entity or email address prior to disclosure to the contact@uniswap.org email; and must not be disclosed in any way other than to the contact@uniswap.org email.  In addition, disclosure to contact@uniswap.org must be made promptly following discovery of the vulnerability.
 Please include as much information about the vulnerability as possible, including:
  
 - The conditions on which reproducing the bug is contingent.
@@ -78,7 +78,7 @@ Anyone who reports a unique, previously-unreported vulnerability that results in
 # **Eligibility**
 
 To be eligible for a reward under this Program, you must:
-- Discover a previously unreported, non-public vulnerability that would result in a loss of or a lock on any ERC-20 token on Uniswap (but not on any third party platform interacting with Uniswap V2) and that is within the scope of this Program.
+- Discover a previously unreported, non-public vulnerability that would result in a loss of or a lock on any ERC-20 token on Uniswap V2 (but not on any third party platform interacting with Uniswap V2) and that is within the scope of this Program.
 - Be the first to disclose the unique vulnerability to contact@uniswap.org, in compliance with the disclosure requirements above. 
 - Provide sufficient information to enable our engineers to reproduce and fix the vulnerability.
 - Not engage in any unlawful conduct when disclosing the bug to contact@uniswap.org, including through threats, demands or any other coercive tactics.
