--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -6,7 +6,7 @@ import styled from 'styled-components'
 <BG />
 
 <div style={{maxWidth: '650px', margin: '0px auto'}}>
-<Title>Uniswap Bug Bounty</Title>
+<Title>Uniswap V2 Bug Bounty</Title>
 
 <center>
   <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
