--- a/src/pages/docs/v2/index.mdx
+++ b/src/pages/docs/v2/index.mdx
@@ -2,15 +2,14 @@
 title: Uniswap Documentation
 ---
 
-Uniswap is an on-chain marketplace for swapping ERC-20 tokens built on Ethereum.
+<Info>
+  Is this your first time here? You might want to take a look at <a href="">What is Uniswap?</a> or{' '}
+  <a href="">how uniswap works</a>.
+</Info>
 
-It eliminates trusted intermediaries and unnecessary forms of rent extraction, allowing for fast, efficient exchange. Under the hood, Uniswap is a protocol-powered token exchange marketplace, operated by a community of participants using smart contracts running autonomously on Ethereum.
+## Getting started
 
-Uniswap doesn't have external dependencies and doesn't rely on central operators.
-
-## Quickstart
-
-![](quick-star.png)
+<Wizard />
 
 ## How Uniswap works
 
@@ -45,3 +44,5 @@ Developers can integrate token swap functionality, or any other Uniswap features
 [Interface development](/liquidity-pools)
 
 Uniswap is permissionless and open source. It has no central operators and is sustained by a community of participants. There is no central token or platform fee. No special treatment is given to early investors, adopters, or developers.
+
+<Github link="">View the Token swap in a smart contract example.</Github>
