--- a/src/pages/docs/v2/index.mdx
+++ b/src/pages/docs/v2/index.mdx
@@ -11,6 +11,10 @@ title: Uniswap Documentation
 
 <Wizard />
 
+New to Uniswap?
+
+<InlineBoxLink title="How Uniswap works" to={''} />
+
 ## How Uniswap works
 
 Uniswap's core functionality enables users to swap between any ERC-20 tokens on Ethereum.
