docs style tweaks

--- a/src/pages/docs/v2/index.mdx
+++ b/src/pages/docs/v2/index.mdx
@@ -2,51 +2,25 @@
 title: Uniswap Documentation
 ---
 
-<Info>
-  Is this your first time here? You might want to take a look at <a href="">What is Uniswap?</a> or{' '}
-  <a href="">how uniswap works</a>.
-</Info>
+The pages that follow contain comprehensive documentation of the Uniswap V2 ecosystem. Briefly, Uniswap is a protocol for exchanging ERC-20 tokens on Ethereum. It eliminates trusted intermediaries and unnecessary forms of rent extraction, allowing for fast, efficient trading. Where it makes tradeoffs decentralization, censorship resistance, and security are prioritized. Uniswap is open-source software licensed under GPL.
 
 ## Getting started
 
 <Wizard />
 
-New to Uniswap?
+## New to Uniswap?
 
-<InlineBoxLink title="How Uniswap works" to={''} />
+<InlineBoxLink title="FAQ" to={''}>
 
-## How Uniswap works
+![](./images/01.png)
 
-Uniswap's core functionality enables users to swap between any ERC-20 tokens on Ethereum.
+</InlineBoxLink>
 
-[Token swaps](/token-swaps)
 
-Uniswap uses a novel mechanism called a **liquidity pool** to enable exchange between two tokens.
+<InlineBoxLink title="How Uniswap works" to={''}>
 
-[Liquidity pools](/liquidity-pools)
+![](./images/01.png)
 
-In practice, a liquidity pool is an instance of a Uniswap smart contract template that enforces certain rules about the balance of the two tokens being deposited in the contract.
+</InlineBoxLink>
 
-These rules, known as an **automated market maker formula**, enable Uniswap to always quote a price to an end-user and provide liquidity, as well as incentivize arbitrageurs to keep prices on Uniswap in line with broader markets.
-
-[Anatomy of a pool](/liquidity-pools)
-
-Because a liquidity pool is just a smart contract, anyone using Ethereum can register a liquidity pool between any two tokens using the Uniswap factory contract.
-
-There are no listing fees and no permission necessary to add a token to Uniswap.
-
-[Creating a pool](/liquidity-pools)
-
-Uniswap democratizes participation in market making for liquidity providers. While traditional exchanges typically present high barriers to entry and technical complexity for market makers, Uniswap makes market making as simple as sending tokens to a liquidity pools.
-
-[Providing liquidity](/liquidity-pools)
-
-Because Uniswap liquidity pools are instances of smart contracts running on Ethereum, it is easy for developers to interact with the code and utilize or extend their functionality.
-
-Developers can integrate token swap functionality, or any other Uniswap features, into to their applications or smart contracts in the same way they can interact with all code running on Ethereum.
-
-[Interface development](/liquidity-pools)
-
-Uniswap is permissionless and open source. It has no central operators and is sustained by a community of participants. There is no central token or platform fee. No special treatment is given to early investors, adopters, or developers.
-
-<Github link="">View the Token swap in a smart contract example.</Github>
+## Tutorials
