--- a/src/pages/docs/v2/01-core-concepts/01-architecture.mdx
+++ b/src/pages/docs/v2/01-core-concepts/01-architecture.mdx
@@ -1,8 +1,18 @@
 ---
-title: Smart Contract Architecture
+title: Architecture
 ---
 
-## Core/Helper Architecture
+## Uniswap at a glance
+
+Uniswap is an on-chain system of smart contracts on the Ethereum blockchain, implementing an automated liquidity protocol based on a <Link to="/docs/v2/core-concepts/math"> “constant product formula” </Link>. Each Uniswap pair stores pooled reserves of two ERC20 Tokens, and provides liquidity for those two assets, maintaining the invariant that the product of the reserves cannot decrease. Traders pay a <Link to="/docs/v2/core-concepts/fees"> 30-basis-point fee </Link> on trades, which goes to liquidity providers. The contracts are non-upgradeable.
+
+## Sustainable Ecosystem
+
+Uniswap has three major users that keep the ecosystem healthy. Traders, Liquidity providers and Developers. Traders swap tokens with a fixed <Link to="/docs/v2/core-concepts/fees"> low fee </Link> bringing volume to the protocol. Liquidity providers are incentivized to pool tokens to capture a portion of those fees leading to better prices and lower slippage for traders. Developers can integrate with the Uniswap protocol by implementing functionality within the smart contracts leading to new interfaces, integrations and experiences increasing the potential traders and LPs in the system.
+
+These interactions drive a positive feedback loop and increase the ability for the token economy to thrive by defining a common language by which to pool, trade and develop on top of liquidity.
+
+## Core/Helper Architecture Overview
 
 [Uniswap V2 Core](https://github.com/Uniswap/uniswap-v2-core) are the essential Uniswap V2 smart contracts, consisting of:
 
@@ -21,7 +31,11 @@ title: Smart Contract Architecture
 
 _Periphery contracts described as "Example" are for illustrative purposes only and should not be used in actual transactions._
 
-While this is a huge improvement, there are some new smart contract patterns introduced which developers building on top of Uniswap should be aware of.
+If you're looking for a deeper discussion about the design of the smart contracts check out
+
+<InlineBoxLink title="Smart contract architecture" to="/docs/v2/smart-contracts/architecture" />
+
+## Notes
 
 - Core uses WETH instead of ETH. Routers can convert between ETH and WETH allowing users to use ETH directly
 - Core stores ERC20 token balances internally instead of relying on the balances stored in the ERC20 token contract
