--- a/src/pages/docs/v2/index.mdx
+++ b/src/pages/docs/v2/index.mdx
@@ -8,21 +8,14 @@ You might want to check out the <Link to="/faq">FAQ</Link> first.
 
 ## Getting started
 
+Use the wizard below to explore by use case. If you're looking for more in depth docs try exploring the sidebar.
+
 <Wizard />
 
-## New to Uniswap?
+## How Uniswap works
 
-<InlineBoxLink title="FAQ" to={''}>
+-- list anatomy stuff
 
-![](./images/01.png)
+## Developer links
 
-</InlineBoxLink>
-
-
-<InlineBoxLink title="How Uniswap works" to={''}>
-
-![](./images/01.png)
-
-</InlineBoxLink>
-
-## Tutorials
+-- list anatomy stuff
