small v2 reorg and initial rework of landing pages

--- a/src/pages/docs/v2/index.mdx
+++ b/src/pages/docs/v2/index.mdx
@@ -2,46 +2,23 @@
 title: Uniswap Documentation
 ---
 
-The pages that follow contain comprehensive documentation of the Uniswap V2 ecosystem. Briefly, Uniswap is a protocol for exchanging ERC-20 tokens on Ethereum. It eliminates trusted intermediaries and unnecessary forms of rent extraction, allowing for fast, efficient trading. Where it makes tradeoffs decentralization, censorship resistance, and security are prioritized. Uniswap is open-source software licensed under GPL.
+Welcome! The pages that follow contain comprehensive documentation of the Uniswap V2 ecosystem.
 
-If you are new to Uniswap, you might want to check out the <Link to="/faq">FAQ</Link> first. 
+If you are new to Uniswap, you might want to check out the <Link to="/docs/v2/protocol-overview">Protocol Overview</Link> or <Link to="/faq">FAQ</Link> first.
 
-## Getting started
+For a walk-through of V2, see the <Link to='/blog/uniswap-v2'>introductory blog post</Link>.
 
-Use the wizard below to explore by use case. If you're looking for more in depth docs try exploring the sidebar.
+## Getting Started
+
+Use the tool below to explore documentation by use case. If you're looking for more in-depth docs, try exploring the sidebar.
 
 <Wizard />
 
-## How Uniswap works
+## Further Resources
 
-Understand the design decisions behind Uniswap in the <Link to="/docs/v2/protocol-overview/architecture/">protocol architecture</Link> overview.
-
-The two main concepts that underpin Uniswap are <Link to="/docs/v2/swaps/overview">Swaps</Link> and <Link to="/docs/v2/pools/overview">Pools</Link>.
-
-Learn how they work in practice in <Link to="/docs/v2/swaps/anatomy-of-a-swap">Anatomy of a Swap</Link> and <Link to="/docs/v2/pools/anatomy-of-a-pool">Anatomy of a Pool</Link>.
-
-Explore the sidebar to find more specific documentation covering other aspects of the protocol.
-
-## Developer links
-
-The Uniswap codebase is comprised of an ecosystem of open source components.
-
-- [`uniswap-v2-core`]()
-- [`uniswap-v2-periphery`]()
-- [`uniswap-frontend`]()
-- [`uniswap-sdk`]()
-
-
-### Reference materials
-
-Get to know the Uniswap SDK and smart contract API objects, methods, attributes, and responses.
-
-
-- <Link to="/docs/v2/SDK">SDK</Link>
-- <Link to="/docs/v2/API">API</Link>
-- <Link to="/docs/v2/smart-contracts">Smart Contracts</Link>
-- [Whitepaper]()
-
-### Developer community
-
-Join the Uniswap developer community on [Discord]().
+- <a href='/whitepaper.pdf' target='_blank' rel='noopener noreferrer'>V2 Whitepaper</a>
+- [GitHub](https://github.com/Uniswap)
+- [Twitter](https://twitter.com/UniswapProtocol)
+- [Discord](https://discord.gg/Y7TF6QA)
+- [Reddit](https://reddit.com/r/Uniswap)
+- [Email](mailto:contact@uniswap.org)
