--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -9,7 +9,7 @@ import styled from 'styled-components'
 <Title>Uniswap V2 Bug Bounty</Title>
 
 <center>
-  <Button style={{color: 'white'}} href="mailto:contact@uniswap.org">
+  <Button  href="mailto:contact@uniswap.org">
     Submit a report
   </Button>
 </center>
