--- a/src/pages/blog/013-launch-uniswap-v3/index.mdx
+++ b/src/pages/blog/013-launch-uniswap-v3/index.mdx
@@ -16,7 +16,7 @@ For a full description of v3&#39;s features, please refer to our announcement [b
 
 The swap interface now routes trades through Uniswap v3 and will alert you when a better exchange rate is available on Uniswap v2.
 
-The Uniswap analytics platform — [https://info.uniswap.org](info.uniswap.org) — now tracks v3 performance. You can continue to review [v2 stats](http://v2.info.uniswap.org/) here.
+The Uniswap analytics platform — [info.uniswap.org](https://info.uniswap.org) — now tracks v3 performance. You can continue to review [v2 stats](http://v2.info.uniswap.org/) here.
 
 # Liquidity providers
 
@@ -55,6 +55,8 @@ The updated interface will default to executing on v3 but will always alert you 
 **4. Is there a v3 liquidity mining program?**
 
 There is no v3 liquidity mining program scheduled at launch. Uniswap governance may introduce a liquidity mining program at any time through the standard Uniswap governance process.
+
+---
 
 To get involved and stay up to date:
 
