Add product update blog post

--- a/src/pages/blog/014-uniswap-optimism-alpha/index.mdx
+++ b/src/pages/blog/014-uniswap-optimism-alpha/index.mdx
@@ -20,7 +20,7 @@ For more information on how Optimistic Ethereum works and its security model, ch
 
 # Launch Details
 
-Users can start migrating assets over to the Optimism Ethereum network through the [Optimism Gateway](https://gateway.optimism.io/). A detailed user guide is available [here](https://help.uniswap.org/en/collections/3033942-layer-2). Optimism is already compatible with popular wallets (Metamask, WalletConnect), Etherscan, and The Graph. Analytics can be tracked at info.uniswap.org/optimism.
+Users can start migrating assets over to the Optimism Ethereum network through the [Optimism Gateway](https://gateway.optimism.io/). A detailed user guide is available [here](https://help.uniswap.org/en/collections/3033942-layer-2). Optimism is already compatible with popular wallets (Metamask, WalletConnect), Etherscan, and The Graph. Analytics can be tracked at info.uniswap.org/#/optimism/.
 
 **Please treat this as an early alpha product**. Optimistic Ethereum is a complex Layer 2 scaling solution still in need of rigorous battletesting. At launch, the Optimism team will have upgrade rights over the bridge contract, allowing them to address any bugs that should arise.
 
