--- a/src/pages/blog/014-uniswap-optimism-alpha/index.mdx
+++ b/src/pages/blog/014-uniswap-optimism-alpha/index.mdx
@@ -43,10 +43,10 @@ Scaling Ethereum will be an iterative process, but this is a major step forward.
 To get involved and stay up to date:
 
 - Join the Uniswap community [discord](https://discord.gg/FCfyBSbCU5)
-- Follow Uniswap on [Twitter](https://twitter.com/Uniswap)
+- Follow Uniswap Labs on [Twitter](https://twitter.com/Uniswap)
 - Subscribe to the Uniswap [blog](/blog)
 - Register as a delegate [Sybil](http://sybil.org/)
-- Participate in [Uniswap governance](http://gov.uniswap.org/)
+- Participate in [Uniswap Governance](http://gov.uniswap.org/)
 
 Uniswap Team
 🦄
