--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -18,13 +18,13 @@ import styled from 'styled-components'
 
 # Overview
 
-Today, we are announcing an official Uniswap v3 Bug Bounty (the &quot;Program&quot;) to incentivize responsible bug disclosure.
+Today, Uniswap Labs is announcing an official Uniswap v3 Bug Bounty (the &quot;Program&quot;) to incentivize responsible bug disclosure.
 
 We are limiting the scope of the Program to critical and high severity bugs in the core contracts and are offering a reward of up to $500,000. Happy hunting!
 
 # Scope
 
-The scope of the Program will initially be limited to high severity bugs in Uniswap&#39;s core contracts. Any bug found that would result in draining reserve funds is considered in scope.
+The scope of the Program will initially be limited to high severity bugs in the Uniswap protocol&#39;s core contracts. Any bug found that would result in draining reserve funds is considered in scope.
 
 The following are not within the scope of the Program:
 
@@ -36,7 +36,7 @@ The following are not within the scope of the Program:
 
 Vulnerabilities contingent upon the occurrence of any of the following also are outside the scope of this Program:
 
-- Front end bugs;
+- Uniswap Interface bugs;
 - DDOS attacks;
 - Spamming;
 - Phishing;
