--- a/src/pages/blog/017-uniswap-arbitrum-alpha/index.mdx
+++ b/src/pages/blog/017-uniswap-arbitrum-alpha/index.mdx
@@ -8,7 +8,7 @@ previewText: 'Uniswap v3 is now available on Arbitrum!'
 
 Today we’re excited to announce that the Arbitrum network is [open to the public](https://arbitrum.io/) — users can now trade on the Arbitrum deployment of Uniswap v3 with low gas costs and instant transaction confirmations!
 
-As DeFi adoption continues to ramp up, bringing scalability to Ethereum has become more necessary than ever. Thankfully, Layer 2 solutions like Arbitrum have the potential to provide additional bandwidth without sacrificing on the ideals of decentralization and security that we value so highly. 
+As DeFi adoption continues to ramp up, bringing scalability to Ethereum has become more necessary than ever. Thankfully, Layer 2 solutions like Arbitrum have the potential to provide additional bandwidth without sacrificing the ideals of decentralization and security that we value so highly. 
 
 During this initial launch, Arbitrum will support throughput of 80k arb gas per second, which should translate to transaction capacity roughly in line with Layer 1. Unlike L1, transactions on Arbitrum confirm instantly — no more pending or stuck swaps!
 
@@ -16,7 +16,7 @@ During this initial launch, Arbitrum will support throughput of 80k arb gas per 
 
 Users can start migrating assets over to the Arbitrum network through the [Arbitrum Bridge](https://bridge.arbitrum.io/) by following this [user guide](). Arbitrum is immediately compatible with popular wallets (Metamask, WalletConnect), as well as analytics services, [Arbiscan](https://arbiscan.io/) and The Graph. Uniswap Protocol activity on Arbitrum can be tracked at [info.uniswap.org/#/arbitrum](info.uniswap.org/#/arbitrum). 
 
-Please treat this as an early alpha product! As a new piece of software, the Arbitrum network is still in need of rigorous battletesting, as Offchain Labs has [noted](). At launch, the Arbitrum team will have upgrade rights over the bridge contract, allowing them to address any issues that may arise. While fraud proofs will be up and running, at the outset there will be a whitelist for validators who may submit proofs. 
+Please treat this as an early alpha product! As a new piece of software, the Arbitrum network is still in need of rigorous battletesting, as Offchain Labs has [noted](). At launch, the Arbitrum team will have upgrade rights over the bridge contract, allowing them to address any issues that may arise. While fraud proofs are up and running, at the outset there is a whitelist of validators who may submit proofs. 
 
 A few additional Alpha launch features to be aware of: 
 
@@ -24,13 +24,15 @@ A few additional Alpha launch features to be aware of:
 
 - **Withdrawal times**: Deposits from Ethereum L1 to the Arbitrum network will take as long as a standard Ethereum transaction, while withdrawals will take 7 days in order to account for the challenge period. However, for select assets and a minor fee, users can opt for fast exits using third party services like Hop Protocol.
 
-- **Available assets**: At launch, the Arbitrum network supports [33 assets](https://bridge.arbitrum.io/token-list-42161.json), including USDC, WETH, and WBTC. Additional tokens will be added to the network on an ongoing basis.. 
+- **Available assets**: At launch, the Arbitrum network supports [33 assets](https://bridge.arbitrum.io/token-list-42161.json), including USDC, WETH, and WBTC. Additional tokens will be added to the network on an ongoing basis.
 
 - **TWAP Oracles**: The Arbitrum sequencer introduces an additional trust assumption for developers using v3 price feeds. More information on the Arbitrum sequencer can be [found here](https://developer.offchainlabs.com/docs/inside_arbitrum#sequencer-mode). 
 
 - **Composability**: Arbitrum supports full composability. As of today, anyone can deploy a smart contract to Arbitrum mainnet! A list of Arbitrum ecosystem projects can be [found here](https://portal.arbitrum.one/). 
 
 While these are still relatively early days and scaling will be an iterative process, we’ve never been more confident that the industry is moving in the right direction!   
+
+---
 
 To get involved and stay up to date:
 
@@ -40,4 +42,5 @@ To get involved and stay up to date:
 - Register as a delegate on [Sybil](https://sybil.org/#/delegates/uniswap)
 - Participate in Uniswap [governance](https://gov.uniswap.org/)
 
-Uniswap Team 🦄
+Uniswap Team
+🦄
