add missing links

--- a/src/pages/blog/017-uniswap-arbitrum-alpha/index.mdx
+++ b/src/pages/blog/017-uniswap-arbitrum-alpha/index.mdx
@@ -14,9 +14,9 @@ During this initial launch, Arbitrum will support throughput of 80k arb gas per 
 
 # Launch Details
 
-Users can start migrating assets over to the Arbitrum network through the [Arbitrum Bridge](https://bridge.arbitrum.io/) by following this [user guide](). Arbitrum is immediately compatible with popular wallets (Metamask, WalletConnect), as well as analytics services, [Arbiscan](https://arbiscan.io/) and The Graph. Uniswap Protocol activity on Arbitrum can be tracked at [info.uniswap.org/#/arbitrum](info.uniswap.org/#/arbitrum). 
+Users can start migrating assets over to the Arbitrum network through the [Arbitrum Bridge](https://bridge.arbitrum.io/) by following this [user guide](https://help.uniswap.org/en/articles/5538618-how-to-deposit-tokens-to-arbitrum). Arbitrum is immediately compatible with popular wallets (Metamask, WalletConnect), as well as analytics services, [Arbiscan](https://arbiscan.io/) and The Graph. Uniswap Protocol activity on Arbitrum can be tracked at [info.uniswap.org/#/arbitrum](info.uniswap.org/#/arbitrum). 
 
-Please treat this as an early alpha product! As a new piece of software, the Arbitrum network is still in need of rigorous battletesting, as Offchain Labs has [noted](). At launch, the Arbitrum team will have upgrade rights over the bridge contract, allowing them to address any issues that may arise. While fraud proofs are up and running, at the outset there is a whitelist of validators who may submit proofs. 
+Please treat this as an early alpha product! As a new piece of software, the Arbitrum network is still in need of rigorous battletesting, as Offchain Labs has [noted](https://offchain.medium.com/mainnet-for-everyone-27ce0f67c85e). At launch, the Arbitrum team will have upgrade rights over the bridge contract, allowing them to address any issues that may arise. While fraud proofs are up and running, at the outset there is a whitelist of validators who may submit proofs. 
 
 A few additional Alpha launch features to be aware of: 
 
