remove double dot

--- a/src/pages/blog/018-auto-router/index.mdx
+++ b/src/pages/blog/018-auto-router/index.mdx
@@ -12,7 +12,7 @@ Today we’re excited to announce the release of our new Auto Router! The Auto R
 - **More powerful algorithm **that considers a larger data set for larger trades and better prices
 - **Gas cost awareness **ensures every added step is net positive for your trade
 
-Lastly, if there is a better trade available on Uniswap v2 after accounting for gas costs, the Auto Router will automatically switch to v2..
+Lastly, if there is a better trade available on Uniswap v2 after accounting for gas costs, the Auto Router will automatically switch to v2.
 
 # Split Routes
 
