--- a/src/pages/blog/018-auto-router/index.mdx
+++ b/src/pages/blog/018-auto-router/index.mdx
@@ -61,7 +61,7 @@ The Uniswap App fetches quotes from an instance of the Auto Router hosted by Uni
 
 We will host a Twitch livestream over the coming weeks to walk through the Auto Router codebase and teach developers how to work with it.
 
-# Measuring Price Improvements
+# Measuring Improvements
 
 In our analysis of 4,429 on-chain swaps from June 1, the Auto Router improves pricing on 13.97% of all trades and 36.84% of trades between the Top 10 tokens by TVL.
 
